# homerwork22

./: .env.sample  README.MD  groups.json  pyproject.toml
blog/: urls.py
catalog/: froms.py  models.py  urls.py  views.py
catalog/migrations/: 0003_alter_product_image.py  0004_product_views_counter.py  0005_product_owner_product_status_publication.py  0006_alter_product_options.py
catalog/templates/catalog/: base.html  contacts.html  product_detail.html  product_form.html  product_list.html
catalog/templates/includes/: inc_menu.html
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_token.py  0003_user_username.py  0004_alter_user_username.py  0005_remove_user_username.py  0006_user_username.py
users/templates/: login.html
users/templates/users/: user_form.html
