[tool.poetry]
name = "sqlproject"
version = "0.1.0"
description = ""
authors = ["maksbolomoznov <bolomozhnov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.lint.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
